--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angular-ui-grid": "~3.0.7",
+    "restangular": "~1.5.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
